github check action: ARGV not ARGS

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,7 +25,7 @@ jobs:
           - unit
           - functional
     env:
-      ARGS: --junit-xml=test-${{ matrix.test }}.xml -vv
+      ARGV: --junit-xml=test-${{ matrix.test }}.xml -vv
       COV_REPORT: xml
     steps:
       - uses: 0compute/pyproject@main
