--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,21 +24,19 @@ jobs:
         test:
           - unit
           - functional
-    env:
-      ARGV: --junit-xml=test-${{ matrix.test }}.xml -vv
-      COV_REPORT: xml
     steps:
       - uses: 0compute/pyproject@main
         with:
           cachix-authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - run: make test-${{ matrix.test }}
+      - run: make test-${{ matrix.test }}-cov
         id: test
         env:
+          ARGV: --junit-xml=test-${{ matrix.test }}.xml --cov-fail-under=0 -vv
           COV_REPORT: html xml
       - uses: actions/upload-artifact@v4
         with:
-          name: coverage-html-${{ matrix.test }}
-          path: coverage-html-${{ matrix.test }}
+          name: tests/coverage-html-${{ matrix.test }}
+          path: tests/coverage-html-${{ matrix.test }}
       - uses: actions/upload-artifact@v4
         if: ${{ success() || (failure() && steps.test.conclusion == 'failure') }}
         with:
@@ -46,7 +44,7 @@ jobs:
           path: test-${{ matrix.test }}.xml
       - uses: coverallsapp/github-action@v2
         with:
-          file: coverage-${{ matrix.test }}.xml
+          file: tests/coverage-${{ matrix.test }}.xml
           flag-name: ${{ matrix.test }}
           parallel: true
   coveralls:
