--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ success() || (failure() && steps.test.conclusion == 'failure') }}
         with:
-          name: test-result
+          name: test-${{ matrix.test}}-result
           path: test-${{ matrix.test }}.xml
       - uses: coverallsapp/github-action@v2
         with:
