gh action: perms for test-reporter

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,6 +4,10 @@ on:
   push:
   pull_request:
 
+# required by dorny/test-reporter
+permissions:
+  checks: write
+
 jobs:
   lint:
     runs-on: ubuntu-latest
