--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,1 +1,11 @@
-../.pyproject/.github/dependabot.yml
+version: 2
+
+updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+  - package-ecosystem: pip
+    directory: /
+    schedule:
+      interval: daily
