--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: 0compute/pyproject@main
         with:
           cachix-authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - run: make lint
+      - run: nix develop -c bash -c "make lint"
         env:
           RUFF_FORMAT: github
       - run: git diff
@@ -32,10 +32,10 @@ jobs:
       - uses: 0compute/pyproject@main
         with:
           cachix-authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - run: make test-${{ matrix.test }}-cov
+      - run: nix develop -c bash -c "make test-${{ matrix.test }}-cov"
         id: test
         env:
-          ARGV: --junit-xml=test-${{ matrix.test }}.xml --cov-fail-under=0 -vv
+          ARGV: --cov-fail-under=0 -vv
           COV_REPORT: html xml
       - uses: actions/upload-artifact@v4
         with:
@@ -59,13 +59,3 @@ jobs:
         with:
           parallel-finished: true
           carryforward: ${{ join(matrix.*, ',') }}
-  test-reporter:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: dorny/test-reporter@v1.9.1
-        with:
-          artifact: /test-.*-result/
-          name: test-report
-          path: test-*.xml
-          reporter: java-junit
