--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: 0compute/pyproject@main
         with:
           cachix-authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - run: nix build ".#devShells.$(nix eval --impure --raw --expr builtins.currentSystem).default"
       - run: nix develop -c bash -c "make test-${{ matrix.test }}-cov"
         id: test
         env:
@@ -41,11 +42,6 @@ jobs:
         with:
           name: coverage-html-${{ matrix.test }}
           path: tests/coverage-html-${{ matrix.test }}
-      - uses: actions/upload-artifact@v4
-        if: ${{ success() || (failure() && steps.test.conclusion == 'failure') }}
-        with:
-          name: test-${{ matrix.test}}-result
-          path: test-${{ matrix.test }}.xml
       - uses: coverallsapp/github-action@v2
         with:
           file: tests/coverage-${{ matrix.test }}.xml
