--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -48,6 +48,7 @@ jobs:
       - uses: 0compute/pyproject@main
         with:
           cachix-authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          devshell: ${{ matrix.python }}
       - run: nix develop ".#${{ matrix.python }}" -c make test-cov
         id: test
         env:
