use pyproject as flake only

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-/*.dist-info/
-/*.egg-info/
-/*.pstat
 /.*_cache/
-/.__pycache__/
-/.coverage*
-/.default.nix
 /.dmypy*.json
+/.flake
+/.flake/
 /.pre-commit-config.yaml
-/.pyinstrument.html
-/.result*
 /.site/
-/.test-results/
+/.taplo.toml
+/.yamllint.yml
 /YAKSHAVE
-/flamegraph.svg
-/result*
+/dev-shell
+/package
+__pycache__/
